--- a/styles.css
+++ b/styles.css
@@ -2,103 +2,94 @@
   --accent-primary:#AC0000;
   --text-primary:#111;
   --text-secondary: #fff;
+  --rgb-black: 0, 0, 0;
   --rgb-secondary: 255, 255, 255;
+  --rgb-header: 69, 69, 69;
   --accent-secondary:#F7FA4C;
-  --nav-height: var(--nav-height);
+  --nav-height: 51px;
 }
 
 * {
   margin: 0;
   padding: 0;
+  text-align: center;
+  list-style: none;
+  border: none;
+  box-shadow: none;
+  background: none;
+  box-sizing: border-box;
 }
-
-html, body {
-  height: 100%; margin: 0;
-}
-
-
-html {
-  scroll-behavior: smooth;
-  scroll-snap-type: y proximity;
-  justify-content: center;
-  display: flex;
-  font-family: 'Inter', sans-serif;
-  color: var(--text-primary)
-}
-
 
 a {
   text-decoration: none;
   cursor: pointer;
 }
 
-
-ul { list-style: none; }
-
-button {
-  border: none;
-  box-shadow: none;
-  background: none;
-  font-weight: 800;
-}
-
-.section-title{
-  text-align:center;
-  font-size:clamp(24px,3.2vw,36px);
-  line-height:1.15;
-  font-weight:800;
-  margin-bottom: 10px;
+html {
+  scroll-behavior: smooth;
+  scroll-snap-type: y proximity;
+  font-family: 'Inter', sans-serif;
+  color: var(--text-primary);
+  box-sizing: border-box;
 }
 
 
+body {
+  position: relative;
+  min-height: 100dvh;
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 51px, 1fr, auto;
+  grid-template-areas: 
+  "navbar"
+  "main"
+  "footer";
+}
 
+.red-button {
+  background-color: var(--accent-primary);
+  color: var(--text-secondary);
+}
+
+  
 /* ----- NAV ----- */
-.site-header {
-  position: fixed;
-  top: 0; left: 50%; right: 0;
-  transform: translateX(-50%);
-  z-index: 10;    
-  background-color: rgba(89, 89, 89, 0.69);
-  height: 51px;
-  width: 100%;
-}
-
-.navbar {
-  position: relative;
+nav {
+  grid-area: navbar;
+  position: sticky;
   display: flex;
-  align-items: center;
-  padding: 0 20px;
-  height: inherit;
+  top: 0;
+  background-color: rgba(var(--rgb-header), 0.69);
+  height: var(--nav-height);
+  transition: background-color .2s ease;
+  z-index: 10;   
+  padding: 0 15px;
 }
 
-#logo {
-  position: relative;
+nav.after-hero {
+  background-color: rgba(var(--rgb-header), .9);
+}
+
+.logo {
+  margin-right: auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: auto;
-  transform: translate(-0.5em, 0.2em);
-}
-
-#logo img {
-  height: 43.35px;
+  height: 70.35px;
+  position: absolute;
   width: auto;
 }
 
-#main-nav {
-  position: absolute;
+
+.main-nav{
   left: 50%;
   top: 50%; 
   transform: translate(-50%, -50%);
-}
-
-.nav-links {
+  position: absolute;
   display: flex;
-  gap: 1.5rem;
+  gap: clamp(1.5rem, 1.5rem + 0.5vw, 3rem)
 }
 
 /* inactive */
-.nav-links a {
+.main-nav a {
   color: rgba( 255, 255, 255, 0.5);
   display: inline-block;
   position: relative;
@@ -107,48 +98,22 @@ button {
 }
 
 /* active */
-.nav-links a[aria-current="true"], 
-.nav-links a[aria-current="page"] { 
+.main-nav a[aria-current="true"], 
+.main-nav a[aria-current="page"] { 
   color: var(--text-secondary);
   font-weight: 600; 
   text-shadow: 0 0 1px var(--text-secondary);
   text-decoration: underline; 
-  text-underline-offset: 20px; 
+  text-underline-offset: 18px; 
   text-decoration-thickness: 1.15px; 
   text-decoration-color: rgba(var(--rgb-secondary), 0.9); 
 }
 
-@media (max-width: 866px) {
-  .nav-links .hamburger-item {
-    display: none;
-  }
-}
+.main-nav .label-full  { display: inline; }
+.main-nav .label-short { display: none; }
 
-@media (max-width: 645px) {
-  .nav-links .label-full  { display: none; }
-  .nav-links .label-short { display: inline; }
-   #logo img {
-    height: clamp(25px, 7vw, 43.35px);
-  }
-}
 
-@media (max-width: 300px) {
-  #logo {
-    display: none;
-  }
-  #main-nav {
-    position: static;
-    left: auto;
-    top: auto;
-    transform: none;
-    flex: 1 1 auto;   /* take available middle space */
-    min-width: 0;     /* allow it to shrink instead of pushing/overlapping */
-  }
-  .nav-links {
-    gap: 0.75rem;     /* a bit tighter */
-    flex-wrap: nowrap;
-  }
-}
+
 
 /* Right Nav*/
 
@@ -166,28 +131,12 @@ button {
   align-items: center;
 }
 
-.nav-icons-container a {
-  text-decoration: none;  
-  color: inherit;        
-  display: inline-flex;   
-  line-height: 0;   
-}
-
-.nav-icons-container img {
-  display: block;    
-}
-
 
 .nav-icon {
   height: 15px;
   width: 15px;
 }
 
-@media (max-width: 1110px) {
-  .nav-icons-container {
-    display: none;
-  }
-}
 
 
 .sign-in-button {
@@ -199,20 +148,6 @@ button {
   padding: 5px 12px;
 }
 
-@media (max-width: 730px) {
-  .sign-in-button {
-    background-color: transparent;
-    padding: 0;
-    width: clamp(16px, 3vw, 24px);
-    height: clamp(16px, 3vw, 24px);
-    background-image: url('/assets/user-icon.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    color: transparent;
-  }
-}
-
 .hamburger {
   display: inline-flex;
   flex-direction: column;
@@ -220,94 +155,180 @@ button {
   background: none;
   border: none;
   cursor: pointer;
-}
-.hamburger span {
   width: 19px;
-  height: 2px;
-  background: white;
-  display: block;
-  border-radius: 4px;
-  font-size: 12px;
+  height: 19px;
 }
 
-/* ----- HERO ----- */
-.hero {
-  position: relative;
-  display: flex;
-  min-height: 100svh;
-  padding-top: 51px;
-  background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)), url('assets/hero-bg.png') center/cover no-repeat;
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  color: var(--text-secondary);
-  border-bottom-left-radius: 14px;
-  border-bottom-right-radius: 14px;
+@media (max-width: 680px) {
+  .sign-in-button {
+    background-color: transparent;
+    padding: 0;
+    width: clamp(16px, 3vw + 4px, 20px);
+    height: clamp(16px, 3vw + 4px, 20px);
+    background-image: url('/assets/user-icon.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: transparent;
+  }
 }
-
-@media (min-width: 1990px) {
-  .hero {
-    min-height: clamp(100svh, calc(100svh + (100vw - 1990px) * 0.25), 200svh);
+@media (max-width: 866px) {
+  .main-nav .hamburger-item {
+    display: none;
+  }
+}
+@media (max-width: 645px) {
+  .main-nav .label-full  { display: none; }
+  .main-nav .label-short { display: inline; }
+  .logo  {
+    height: clamp(25px, 7vw, 43.35px);
+  }
+}
+@media (max-width: 300px) {
+  .logo {
+    display: none;
+  }
+  #main-nav {
+    position: static;
+    left: auto;
+    top: auto;
+    transform: none;
+    flex: 1 1 auto;  
+    min-width: 0; 
+  }
+  .main-nav {
+    gap: 0.75rem;
+    flex-wrap: nowrap;
+  }
+}
+@media (max-width: 1110px) { 
+  .nav-icons-container {
+    display: none;
   }
 }
 
-.hero-content {
+
+
+
+aside {
+  grid-area: sidebar;
+  position: sticky;
+  align-self: start;
+  top: var(--nav-height);
+  height: 100dvh;
+  height: 100vh;
+}
+
+main {
+  grid-area: main;
+  position: relative;
+  top: -51px;
+}
+
+footer {
+  grid-area: footer;
+}
+
+
+  aside {
+    position: fixed;
+    width: 300px;
+    display: none;
+  }
+
+  .show{
+    display: block;
+  }
+
+
+.section-title{
+  text-align:center;
+  font-size:clamp(24px,3.2vw,36px);
+  line-height:1.15;
+  font-weight:800;
+  margin-bottom: 10px;
+}
+
+
+#sidebar {
+  display: none;
+}
+
+@media(min-width: 2100px) {
+  body {
+    grid-template-columns: 8fr 2fr; /* Add sidebar column */
+    grid-template-areas:
+      "navbar sidebar"
+      "main sidebar"
+      "footer sidebar";
+  }
+
+  .sidebar {
+    display: block;
+  }
+
+  .hamburger {
+    display: none;
+  }
+}
+
+
+/* ----- HERO ----- */
+.hero {
+  padding: var(--nav-height) 0 0 0;
   display: flex;
-  flex-direction: column;
+  height: 100dvh;
+  height: 100vh;
+  padding-top: var(--nav-height);
+  background: linear-gradient(rgba(var(--rgb-black),.6), rgba(var(--rgb-black),.6)), url('assets/hero-bg.png') center 30%/cover no-repeat;
+  justify-content: center;
   align-items: center;
+  transition: background-size 0.5s ease, background-position 0.5s ease;
+  color: var(--text-secondary);
+  border-bottom-left-radius: 14px;
+  border-bottom-right-radius: 14px;
+  gap: 120px;
+  flex-direction: column;
 }
 
-.hero-content > * { 
-  margin-top: 0; 
-}
 
-
-.hero-title {
+.business-name {
   font-weight: 800;
   font-size: 64px;
-  margin-bottom: 0px;
   letter-spacing: 2px;
 }
 
 .hero-tagline {
   font-weight: 500;
   font-size: 20px;
-  margin-bottom: 80px;
-  margin-top: 0px;
+  grid-row: 3;
 }
 
 .hero-actions {
-  font-style: italic;
-}
-
-.hero-actions > * { 
-  margin-top: 0; 
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: max-content;
 }
 
 
 .btn-book {
-  display: block;
-  width: fit-content; 
-  border: 2.5px solid #fff;
+  width: 100%; 
+  border: 2.5px solid var(--text-secondary);
   background: transparent;
-  font-style: normal;
   border-radius: 12px;
-  color: #fff;
-  margin-inline: auto;   
+  color: var(--text-secondary);
   font-weight: 800;
   font-size: 30px;
-  line-height: 1;
-  padding: 15px 40px;
+  padding: 15px 0;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
-  margin-bottom: 16px;
 }
 
 .helper-subtext {
   font-weight: 500;
   font-size: 20px;
-  margin-bottom: 16px;
+  font-style: italic;
 }
 
 .hero-phone {
@@ -317,39 +338,35 @@ button {
   text-decoration: underline;
   text-underline-offset: 8px;
   color: white;
-  margin-bottom: 18px;
-  font-style: normal;
 }
 
 .helper-text {
   font-weight: 500;
   font-size: 16px;
-  margin-bottom: 180px;
+  font-style: italic;
 }
 
 
 .hero-subtitles {
+  position: relative;
+  top: 40px;
   font-size: 18px;
   font-style: italic;
-  margin-bottom: 30px;
-}
-
-.image-wrapper {
-  display: inline-block;
-  padding: 20px;
-  cursor: pointer;
 }
 
 .down-arrow {
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  left: 50%;
-  bottom: 16px;
-  transform: translateX(-50%);
-  display: inline-flex;
-  text-decoration: none;
+  width: 26px;
+  height: 26px;
+  padding: 5px;
+  position: relative;
+  top: 40px;
 }
+
+.down-arrow img {
+  height: 100%;
+  width: 100%;
+}
+
 
 .hero,
 .about {
