--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@
   --rgb-header: 69, 69, 69;
   --accent-secondary:#F7FA4C;
   --nav-height: 51px;
+  --s-64: 3.33vw;
+  --s-24: 1.25vw;
+  --s-30: 1.5625vw;
+  --s-20: 1.04vw;
+  --s-36: 1.875vw;
+  --s-16: .83vw;
 }
 
 * {
@@ -275,33 +281,40 @@ footer {
 
 /* ----- HERO ----- */
 .hero {
-  padding: var(--nav-height) 0 0 0;
   display: flex;
   height: 100dvh;
   height: 100vh;
   padding-top: var(--nav-height);
   background: linear-gradient(rgba(var(--rgb-black),.6), rgba(var(--rgb-black),.6)), url('assets/hero-bg.png') center 30%/cover no-repeat;
-  justify-content: center;
-  align-items: center;
   transition: background-size 0.5s ease, background-position 0.5s ease;
   color: var(--text-secondary);
   border-bottom-left-radius: 14px;
   border-bottom-right-radius: 14px;
-  gap: 120px;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-content {
+  display: inline-flex;
+  height: max-content;
+  width: max-content;
   flex-direction: column;
+  gap: clamp(30px, 12vh, 130px);
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
 }
 
 
 .business-name {
-  font-weight: 800;
-  font-size: 64px;
+  font-weight: 700;
+  font-size: clamp(62px, var(--s-64), 67px);
   letter-spacing: 2px;
 }
 
 .hero-tagline {
-  font-weight: 500;
-  font-size: 20px;
-  grid-row: 3;
+  font-weight: 400;
+  font-size: clamp(22px, var(--s-24), 27px);
 }
 
 .hero-actions {
@@ -315,34 +328,32 @@ footer {
 
 .btn-book {
   width: 100%; 
-  border: 2.5px solid var(--text-secondary);
+  border: 3px solid var(--text-secondary);
   background: transparent;
   border-radius: 12px;
   color: var(--text-secondary);
-  font-weight: 800;
-  font-size: 30px;
+  font-weight: 600;
+  font-size: clamp(28px, var(--s-30), 33px);
   padding: 15px 0;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
 }
 
-.helper-subtext {
-  font-weight: 500;
-  font-size: 20px;
-  font-style: italic;
+#subtext {
+  font-size: .5vw;
 }
 
 .hero-phone {
   display: block;
-  font-weight: 800;
-  font-size: 43px;
+  font-weight: 600;
+  font-size: clamp(34px, var(--s-36), 39px);
   text-decoration: underline;
   text-underline-offset: 8px;
   color: white;
 }
 
 .helper-text {
-  font-weight: 500;
-  font-size: 16px;
+  font-weight: 400;
+  font-size: clamp(18px, var(--s-20), 23px);
   font-style: italic;
 }
 
@@ -350,8 +361,14 @@ footer {
 .hero-subtitles {
   position: relative;
   top: 40px;
-  font-size: 18px;
+  font-size: clamp(14px, var(--s-16), 19px);
   font-style: italic;
+}
+
+@media (max-width: 700px) {
+  .hero-subtitles {
+    max-width: 80vw;
+  }
 }
 
 .down-arrow {
