--- a/styles.css
+++ b/styles.css
@@ -49,12 +49,11 @@ body {
 }
 
 section {
-  width: 100dvw;
-  width: 100svw;
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100dvh;
   min-height: 100svh;
   padding: 51px 0;
+  overflow-x: hidden;
 }
 
 .red-button {
@@ -190,20 +189,20 @@ nav.after-hero {
 }
 @media (max-width: 866px) {
   .main-nav .hamburger-item {
-    display: none;
+    display: none;}
+  .logo  {
+    height: calc(3vw + 30px);
+    top: calc(51px - 14% - 4vw);
   }
 }
 @media (max-width: 645px) {
   .main-nav .label-full  { display: none; }
   .main-nav .label-short { display: inline; }
-  .logo  {
-    height: clamp(25px, 7vw, 43.35px);
-  }
-}
-@media (max-width: 300px) {
   .logo {
     display: none;
   }
+}
+@media (max-width: 300px) {
   #main-nav {
     position: static;
     left: auto;
@@ -246,15 +245,15 @@ footer {
 }
 
 
-  aside {
-    position: fixed;
-    width: 300px;
-    display: none;
-  }
+aside {
+  position: fixed;
+  width: 300px;
+  display: none;
+}
 
-  .show{
-    display: block;
-  }
+.show{
+  display: block;
+}
 
 
 .section-title{
@@ -284,14 +283,12 @@ footer {
 }
 
 
+
+
 /* ----- HERO ----- */
 .hero {
   position: relative;
   display: flex;
-  min-width: 100dvw;
-  min-height: 100dvh;
-  min-height: 100vh;
-  min-height: 100svh;
   padding: var(--nav-height), 0;
   background: linear-gradient(rgba(var(--rgb-black),.6), rgba(var(--rgb-black),.6)), url('assets/hero-bg.png') center 35%/cover no-repeat;
   transition: background-size 0.5s ease, background-position 0.5s ease;
@@ -405,13 +402,10 @@ footer {
     gap: clamp(90px, 7.4vw , 145px);
   }
   .business-name {
-    font-size: clamp(13px, 2.6vw + 12.8px, 67px);
+    font-size: clamp(13px, 2.6vw + 12.8px, 47px);
   }
   .hero-tagline {
-    font-size: clamp(12px, 1.12vw + 2.4px, 28px);
-  }
-  .hero-actions {
-    gap: 16px;
+    font-size: clamp(12px, 1.12vw + 2.4px, 20px);
   }
   .btn-book {
     font-size: clamp(14px, 1.4vw + 3px, 33px);
