--- a/styles.css
+++ b/styles.css
@@ -301,11 +301,11 @@ aside {
 }
 
 .hero-content {
-  display: inline-flex;
-  height: max-content;
+  display: flex;
+  height: fit-content;
   width: max-content;
   flex-direction: column;
-  gap: clamp(120px, 5vw + 2vh + 28px, 145px);
+  gap: clamp(120px, calc(5vw + 2vh + 28px), 145px);
   justify-content: center;
   align-items: center;
   max-width: 100%;
@@ -314,13 +314,13 @@ aside {
 
 .business-name {
   font-weight: 700;
-  font-size: clamp(47px, 2vw + 25px, 67px);
+  font-size: clamp(47px, calc(2vw + 25px), 67px);
   letter-spacing: 2px;
 }
 
 .hero-tagline {
   font-weight: 400;
-  font-size: clamp(20px, .75vw + 14px, 28px);
+  font-size: clamp(20px, calc(.75vw + 14px), 28px);
 }
 
 .hero-actions {
@@ -328,7 +328,6 @@ aside {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: max-content;
 }
 
 
@@ -339,19 +338,19 @@ aside {
   border-radius: 12px;
   color: var(--text-secondary);
   font-weight: 600;
-  font-size: clamp(26px, .94vw + 12px, 33px);
-  padding: calc(.375vw + 5px) 0;
+  font-size: clamp(26px, calc(.94vw + 12px), 33px);
+  padding: calc(.375vw + 5px) 1px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
 }
 
-#subtext {
-  font-size: clamp(16px, .625vw + 7px, 22px);
+#sub-text {
+  font-style: italic;
 }
 
 .hero-phone {
   display: block;
   font-weight: 600;
-  font-size: clamp(34px, 1.125vw + 14.4px, 39px);
+  font-size: clamp(34px, calc(1.125vw + 14.4px), 39px);
   text-decoration: underline;
   text-underline-offset: 8px;
   color: white;
@@ -359,21 +358,15 @@ aside {
 
 .helper-text {
   font-weight: 400;
-  font-size: clamp(16px, .625vw + 8px, 23px);
-  font-style: italic;
+  font-size: clamp(16px, calc(.625vw + 8px), 23px);
+  font-style: normal;
 }
 
 
 .hero-subtitles {
-  font-size: clamp(12px, .5vw + 6.5px, 19px);
+  font-size: clamp(14px, calc(.5vw + 6.5px), 19px);
   font-style: italic;
   font-weight: 200;
-}
-
-@media (max-width: 900px) {
-  .hero-subtitles {
-    max-width: 65vw;
-  }
 }
 
 .down-arrow {
@@ -400,45 +393,32 @@ aside {
 
 @media (max-width: 1070px) {
   .hero-content {
-    gap: clamp(90px, 7.4vw , 145px);
+    gap: clamp(120px, calc(180px - 28vw + 6vh), 180px);
   }
   .business-name {
-    font-size: clamp(13px, 2.6vw + 12.8px, 47px);
+    font-size: clamp(24px, calc(7vw + 2px), 47px);
   }
   .hero-tagline {
-    font-size: clamp(12px, 1.12vw + 2.4px, 20px);
+    font-size: clamp(14px, calc(3vw + 2px), 20px);
   }
   .btn-book {
-    font-size: clamp(14px, 1.4vw + 3px, 33px);
-    padding: calc(.2vw + 7px) 0;
-    border-width: 1.5px;
-    border-radius: 10px;
-  }
-  #subtext {
-  font-size: clamp(16px, .625vw + 7px, 22px);
+    font-size: clamp(20px, calc(4vw + 2px), 26px);
+    border-width: clamp(2.4px, calc(2px + .15vw), 3px);
+    border-radius: calc(1.1vw + 5px);
+
   }
 
   .hero-phone {
-    font-size: clamp(18px, 1.68vw + 3.6px, 39px);
+    font-size: clamp(26px, calc(4vw + 4px), 34px);
   }
 
   .helper-text {
-    font-weight: 400;
-    font-size: clamp(10px, .936vw + 2px, 23px);
-    font-style: italic;
+    font-size: clamp(11px, calc(.8vw + 8px), 16px);
   }
-
 
   .hero-subtitles {
-    font-size: clamp(10px, .75vw + 1.6px, 19px);
-    font-style: italic;
-    font-weight: 200;
-  }
-
-  @media (max-width: 900px) {
-    .hero-subtitles {
-      max-width: 65vw;
-    }
+    font-size: clamp(10px, calc(.95vw + 7px), 14px);
+    width:80%;
   }
 
   .down-arrow {
