--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   --text-secondary: #fff;
   --accent-secondary:#F7FA4C;
   --accent-tertiary: #d9d9d9;
+  --dark-gray: #323232;
   --rgb-black: 0, 0, 0;
   --rgb-secondary: 255, 255, 255;
   --rgb-header: 69, 69, 69;
@@ -37,12 +38,14 @@ html {
 
 
 body {
+  margin: 0 auto;
+  background-color: var(--text-secondary);
   position: relative;
   min-height: 100dvh;
   min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 51px, 1fr, auto;
+  grid-template-rows: 51px 1fr auto;
   grid-template-areas: 
   "navbar"
   "main"
@@ -51,8 +54,7 @@ body {
 
 section {
   max-width: 100vw;
-  min-height: 100dvh;
-  min-height: 100svh;
+  min-height: auto;
   padding: 51px 0;
   overflow-x: hidden;
 }
@@ -289,6 +291,8 @@ aside {
 /* ----- HERO ----- */
 .hero {
   position: relative;
+  height: 100vh;
+  height: 100svh;
   display: flex;
   padding: var(--nav-height), 0;
   background: linear-gradient(rgba(var(--rgb-black),.6), rgba(var(--rgb-black),.6)), url('assets/hero-bg.png') center 35%/cover no-repeat;
@@ -443,18 +447,21 @@ aside {
 
 /* ----- ABOUT ----- */
 .about {
-  min-height: 100dvh;
-  min-height: 100vh;
   padding: var(--nav-height) 0px;
+  background-color: var(--text-secondary);
+  height: 100vh;
+  height: 100svh;
+  overflow: hidden;
 }
 
 .about-content {
-  display: grid;
-  grid-template-rows: auto auto;
-  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .about-overview {
+  flex: 1;
   display: grid;
   grid-template-columns: 458px 1fr;
   gap: 40px;
@@ -485,10 +492,11 @@ aside {
 }
 
 .about-details {
-  display: grid;
-  grid-template-columns: max-content max-content;
-  gap: 190px;
+  flex: 1;
+  display: flex;
   justify-content: center;
+  background-color: var(--accent-primary);
+  color: var(--text-secondary);
 }
 
 .about-details h3 {
@@ -498,19 +506,23 @@ aside {
 
 .about-details * {
   font-size: 20px;
+  flex: 1;
 }
 
 
 .office-hours {
   text-align: center;
-  width: auto;
+  width: 1px;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
 }
 
 .hours-list {
+  padding: 30px 0;
   display: grid;
-  grid-template-columns: auto auto;
-  gap: 4px 10px;
-  margin-inline: auto;
+  grid-template-columns: max-content max-content;
+  gap: 10px 120px;
 }
 
 .hours-list * {
@@ -839,7 +851,6 @@ aside {
 
 .use-our-car-link {
   max-height: fit-content;
-  min-height: auto;
 }
 
 .use-our-car-link p {
@@ -888,4 +899,179 @@ footer * {
 
 footer :last-child {
   font-size: 12px;
+}
+
+
+
+
+
+/***** SIGN-UP page *****/
+
+.sign-up-content{
+  background-color: var(--dark-gray);
+  display: flex;
+  padding: 20px;
+  height: 100vh;
+  height: 100svh;
+}
+
+.sign-up-left {
+  color: var(--text-secondary);
+  flex: 1;
+  font-size: 16px;
+  position: relative;
+  top: 100px;
+  overflow: visible;
+  min-width: 0;
+}
+
+.sign-up-left h1 {
+  font-size: 36px;
+}
+
+.sign-up-logo {
+  width: 127px;
+}
+
+.astar-car {
+  position: relative;
+  bottom: -20px;
+  z-index: 10px;
+  display: block;
+  max-width: none;
+}
+
+.sign-up-right {
+  background-color: var(--accent-tertiary);
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.sign-up-right > div {
+  width: 400px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.sign-up-right > div div {
+  width: 100%;
+}
+
+.sign-up-right * {
+  font-size: 15px;
+}
+
+.sign-up-right > div > div {
+  margin: 16px 0;
+}
+
+.brand-heading {
+  color: var(--accent-primary);
+  font-weight: 800;
+  font-size: 36px;
+}
+
+.sign-up-right a {
+  text-decoration: underline;
+  color: var(--accent-primary);
+}
+
+form input {
+  text-align: left;
+  position: relative;
+  flex: 1;
+}
+
+
+form > div:not(:first-child) {
+  display: flex;
+  padding: 20px 10px;
+  border: 1px solid var(--dark-gray);
+  border-radius: 10px;
+}
+
+form > :first-child {
+  display: flex;
+  gap: 6px;
+}
+
+form > :first-child div {
+  padding: 20px 10px;
+  border: 1px solid var(--dark-gray);
+  border-radius: 10px;
+  flex: 1 1 50%;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: center;
+}
+
+form img {
+  width: 25px;
+}
+
+.sign-up-right .red-button{
+  width: fit-content;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 10px 12px;
+  margin: 0 auto;
+}
+
+.sign-up-sub-text{
+  display: flex;
+  color: var(--text-primary);
+  align-items: center;
+}
+.sign-up-sub-text::before,
+.sign-up-sub-text::after {
+  content: "";
+  flex: 1;
+  height: 1px;
+  background-color: var(--accent-primary);
+}
+
+.sign-up-sub-text::before { margin-right: 16px }
+.sign-up-sub-text::after  { margin-left: 16px}
+
+
+.sign-up-options img {
+  width: 20px;
+  height: 20px;
+  margin: 0 10px;
+}
+
+.sign-up-options {
+  width: 100%;
+  display: flex;
+  gap: 10px;
+}
+
+.sign-up-options span {
+  position: relative;
+  top: -3px;
+}
+
+.sign-up-options button {
+  flex: 1 1 50%;
+  padding: 6px 30px;
+  border-radius: 10px;
+  background-color: var(--text-primary);
+  color: var(--text-secondary);
+}
+
+#google {
+  background-color: var(--text-secondary);
+  color: var(--text-primary);
+  border: 1px solid var(--text-primary);
 }
