--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
 section {
   max-width: 100vw;
   min-height: auto;
-  padding: 51px 0;
+  padding-top: 51px;
   overflow-x: hidden;
 }
 
@@ -1097,19 +1097,19 @@ form img {
   align-items: center;
 }
 
-.btw-title {
+.page-title {
   font-size: 36px;
   font-weight: 600;
 }
 
-.btw-summary {
+.page-summary {
   font-size: 20px;
   color: #595959;
   font-weight: 300;
   margin: 10px 0;
 }
 
-.btw-note {
+.page-note {
   font-size: 16px;
   color: #595959;
   font-weight: 300;
@@ -1250,3 +1250,49 @@ form img {
 .btw-use-our-car-link p {
   color: #595959;
 }
+
+/***** USE OUR CAR page *****/
+
+.uoc-main {
+  top: 0;
+}
+
+.uoc-body {
+  height: fit-content;
+  margin: 0;
+}
+
+.uoc-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 36px;
+  padding: 76px 320px 0 320px;
+  position: relative;
+}
+
+.bold-red-button {
+  padding: 10px 18px;
+  color: var(--text-secondary);
+  background-color: var(--accent-primary);
+  font-weight: 800;
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  z-index: 1;
+}
+
+.uoc-content .page-note {
+  font-size: 14px;
+}
+
+.uoc-content img {
+  position: relative;
+  height: 652px;
+  top: -40px;
+}
+
+.uoc-content span {
+  font-weight: 600;
+}
+
